# ChangeLog for x11-libs/startup-notification
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/startup-notification/ChangeLog,v 1.74 2011/04/15 18:09:49 ssuominen Exp $

  15 Apr 2011; Samuli Suominen <ssuominen@gentoo.org>
  startup-notification-0.10.ebuild:
  Remove useless libtool archive libstartup-notification-1.la.

  06 Feb 2011; Mart Raudsepp <leio@gentoo.org> startup-notification-0.9.ebuild:
  Drop to ~mips

  15 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  startup-notification-0.10.ebuild:
  Transfer Prefix keywords

  31 Dec 2009; Brent Baude <ranger@gentoo.org>
  startup-notification-0.10.ebuild:
  Marking startup-notification-0.10 ppc64 for bug 287214

  15 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  startup-notification-0.10.ebuild:
  ia64/sh/sparc stable wrt #287214

  26 Oct 2009; Jeroen Roovers <jer@gentoo.org>
  startup-notification-0.10.ebuild:
  Stable for HPPA (bug #287214).

  21 Oct 2009; Markus Meier <maekke@gentoo.org>
  startup-notification-0.10.ebuild:
  arm stable, bug #287214

  11 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  startup-notification-0.10.ebuild:
  Stable on alpha, bug #287214

  07 Oct 2009; nixnut <nixnut@gentoo.org> startup-notification-0.10.ebuild:
  ppc stable #287214

  03 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  startup-notification-0.10.ebuild:
  stable x86, bug 287214

  01 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  startup-notification-0.10.ebuild:
  amd64 stable wrt #287214

  26 Jul 2009; Gilles Dartiguelongue <eva@gentoo.org>
  startup-notification-0.10.ebuild,
  +files/startup-notification-0.10-tests.patch:
  Do not build test programs unless needed, bug #226257.

*startup-notification-0.10 (25 Apr 2009)

  25 Apr 2009; Daniel Gryniewicz <dang@gentoo.org>
  +startup-notification-0.10.ebuild:
  Bump to startup-notification-0.10

  - Uses XCB now

  22 Sep 2007; Tom Gall <tgall@gentoo.org>