@@ -3,13 +3,15 @@ Hash: SHA256
 
 AUX startup-notification-0.10-tests.patch 408 RMD160 6a2d9310b3dabd4264a65ca22be718dc7688678f SHA1 07478c3408779e115df5aea3229259cc6985725e SHA256 379caf2a12757163179d5a490c6d1fe346f70a8db4f9b9af609aba28db1b8452
 DIST startup-notification-0.10.tar.gz 328787 RMD160 de905634db3263d24b69ae42887111b7ff95b3ba SHA1 670c5e44f59e3844e2ca0c67730ba9ca5f5228fc SHA256 64bbeb5c28619721fc19d6920ad2b8bf6c0dc3a0e96a1b0bc26f480fbc525459
+DIST startup-notification-0.10_p20110426.tar.xz 38192 RMD160 9bc696dcbc4d4bf02c014eceebc3a47dbba79650 SHA1 4ed0264c58770b665bcb20c2a335dbad19056e0c SHA256 6423719efaf076e0d1d30178ca47827b973d20d1828187f2fe505446f98c7f01
 EBUILD startup-notification-0.10.ebuild 1197 RMD160 7d5e37504b03c16527b75ee8d291e6f1ff721aa3 SHA1 d6d854e58be6e63a8bc061df149231d02c3b7d96 SHA256 670634be480824c6a94b315852349137e2d61753eb58a18c0475e1c5ba826fae
-MISC ChangeLog 8187 RMD160 596c764cd48c46d25bebe06211be58ca540bd076 SHA1 1c9c3e7dcebdf084ec4156e3851f977c734415d3 SHA256 f7f39f40c8d6566f09b78ad32b581f4aee74d6a019a55f9797f85d9363e70f5d
+EBUILD startup-notification-0.10_p20110426.ebuild 912 RMD160 27b3cf96a03779f0b0284de39ca2ca0d572223a6 SHA1 f214268d67009f8dfa1091b785dfb38846dc5da2 SHA256 2cf758c27e2931bde5e48e4f81a55de13be89067edab6abae36c90627ea3f59c
+MISC ChangeLog 8392 RMD160 d143b0317ac2f858fc9b566c4c10024e89d73517 SHA1 66d92dbb5af2198fded22f983478f4e1084fede1 SHA256 224aeda1ea00f952710cb62a23c2c57b378cc1d0425a2b2efa4712da2d7bf474
 MISC metadata.xml 234 RMD160 bd496dac30573bf707591b2b2ad497860e5aa029 SHA1 4641c1e70e35e944e7019aeae967deb1d2c28186 SHA256 3018e3b31ed690a57bfc14e35699dd20ea3b352fc28b918f699e6955b57a2d97
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk2oigsACgkQXkR9YqOcLPEjDAD/YlKrjv0RgIyzsQ1Dv/HQGp1S
-dd2ETP6iugh07N8S0jsA/RUyUp0WKKe91S2flP9eB2eWELBlEXPUI6QtuNEg8wGv
-=KR0P
+iF4EAREIAAYFAk22384ACgkQXkR9YqOcLPESqQD/VAlM6QBbBtPv6KxAKfNzkPM5
+//iD+rar66a4WwEyBM4BAIIbRy83sDRNSJ/kfKctmwzS0qWrVkxklWuUstHqmEfx
+=I/Wm
 -----END PGP SIGNATURE-----
