@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/startup-notification
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/startup-notification/ChangeLog,v 1.74 2011/04/15 18:09:49 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/startup-notification/ChangeLog,v 1.75 2011/04/26 15:06:29 ssuominen Exp $
+
+*startup-notification-0.10_p20110426 (26 Apr 2011)
+
+  26 Apr 2011; Samuli Suominen <ssuominen@gentoo.org>
+  +startup-notification-0.10_p20110426.ebuild:
+  Fix building with xcb-util >= 0.3.8 by snapshot.
 
   15 Apr 2011; Samuli Suominen <ssuominen@gentoo.org>
   startup-notification-0.10.ebuild:
